# ai-workflow

./: .gitignore  README.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
plugins/ai-workflow/: LICENSE  README.md  VERIFICATION.md  aiw  aiw.cmd  pyproject.toml
plugins/ai-workflow/.claude-plugin/: plugin.json
plugins/ai-workflow/.codex-plugin/: plugin.json
plugins/ai-workflow/docs/: adoption.md  specification.md
plugins/ai-workflow/examples/: project.json
plugins/ai-workflow/hooks/: claude-hooks.json  knowledge-candidate-reminder.py
plugins/ai-workflow/scripts/: validate-dual-host-plugin.py
plugins/ai-workflow/skills/development-workflow/: SKILL.md
plugins/ai-workflow/skills/development-workflow/agents/: openai.yaml
plugins/ai-workflow/skills/development-workflow/references/: host-compatibility.md
plugins/ai-workflow/src/ai_workflow/: __init__.py  cli.py  discovery.py  installation.py  io_utils.py  knowledge.py  migration.py  tasks.py  validation.py  verification.py
plugins/ai-workflow/src/ai_workflow/templates/: AGENTS.block.md  project-notes.md  project.schema.json
plugins/ai-workflow/src/ai_workflow/templates/knowledge/: index.md  learnings.md
plugins/ai-workflow/src/ai_workflow/templates/workflow/: analyze.md  change.md  entry.md  learn.md  onboard.md  review.md
plugins/ai-workflow/tests/: test_cli_e2e.py  test_discovery.py  test_installation.py  test_knowledge.py  test_migration.py  test_plugin.py  test_tasks.py  test_validation.py  test_verification.py
